# fastapi_example_app

./: pyproject.toml
app/: docker-compose.yml  main.py  pyproject.toml
app/api/: __init__.py
app/api/api_v1/: __init__.py  users.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  user.py
app/crud/: users.py
app/utils/: case_converter.py
