[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nik443 <nikhram301@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.4"}
pydantic-settings = "^2.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
